create admin page skeleton

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,6 +7,38 @@
   <title>Admin</title>
 </head>
 <body>
-  <h1>adming.ejs</h1>
+  <header>
+    Restaurant Logo
+  </header>
+  <main>
+    <div id="pending-orders">
+      <h1>
+        Orders waiting for confirmation
+      </h1>
+      <div class="pending-order-details">
+        <span class="individual-order-details">
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi cumque.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi cumque.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi cumque.</p>
+        </span>
+        <span class="indidual-order-input">
+          <form action="">
+            <input type="text">
+            <button>Confirm Order</button>
+          </form>
+        </span>
+      </div>
+    </div>
+    <div id="confirmed-orders">
+      <h1>
+        Confirmed Orders
+      </h1>
+      <span class="individual-order-details">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, sequi cumque.</p>
+      </span>
+    </div>
+  </main>
 </body>
 </html>
