--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,9 +7,7 @@
   <title>Admin</title>
 </head>
 <body>
-  <header>
-    Restaurant Logo
-  </header>
+  <%- include('partials/_header') %>
   <main>
     <div id="pending-orders">
       <h1>
