create home skeleton

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,13 @@
   <title>Home</title>
 </head>
 <body>
-  <h1>Home.ejs</h1>
+  <%- include('partials/_header') %>
+  <main>
+    <h1>Welcome to [restaurant]</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
+    <button>Order Now!</button>
+  </main>
 </body>
 </html>
