--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,5 +15,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
     <button>Order Now!</button>
   </main>
+  <%- include('partials/_footer') %>
 </body>
 </html>
