import stylesheet into footer partial

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,10 +1,11 @@
+<link rel="stylesheet" href="../../styles/footer.css">
 <footer>
-  <span class="footer-logo">
+  <div class="footer-logo">
     <h1>LOGO</h1>
-  </span>
-  <span class="contact-info">
+  </div>
+  <div class="contact-info">
     <h3>Lorem ipsum dolor</h3>
     <h3>Lorem ipsum dolor</h3>
     <h3>Lorem ipsum dolor</h3>
-  </span>
+  </div>
 </footer>
