--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -22,47 +22,49 @@
 <body>
   <%- include('partials/_header') %>
   <main>
-    <div class="pending-orders">
-      <h1>
-        Orders waiting for confirmation
-      </h1>
-      <!-- Template for individual orders -->
-      <div class="pending-order-details">
-        <div class="individual-order-details">
-          <h2>Client Name</h2>
-          <h3>Order #1234</h3>
-          <h3>Time placed</h3>
+    <!-- Start of Template for incoming individual orders -->
+    <div class="waiting-confirmation">
+      <div class="header">
+        <h2>Orders waiting for confirmation</h2>
+      </div>
+      <div class="main">
+        <div class="left">
+          <h3>Customer Name</h3>
+          <h3>Order Number</h2>
           <ul>
-            <li>Order Item, quantity: 1</li>
-            <li>Order Item, quantity: 1</li>
-            <li>Order Item, quantity: 1</li>
+            <li>Order Item, quantity</li>
+            <li>Order Item, quantity</li>
+            <li>Order Item, quantity</li>
           </ul>
         </div>
-        <div class="indidual-order-input">
+        <div class="right">
           <form action="">
-            <input type="text">
-            <button>Confirm Order</button>
+            <input class="estimated-time" type="text" placeholder="Enter pickup time">
+            <button type="submit" class="confirm">Accept Order</button>
           </form>
         </div>
       </div>
+      <hr>
     </div>
+    <!-- End of Template for incoming individual orders -->
+    <!-- Start of Template for Confirmed Orders -->
     <div class="confirmed-orders">
-      <h1>
-        Confirmed Orders
-      </h1>
-      <span class="individual-order-details">
-        <div class="individual-order-details">
-          <h2>Client Name</h2>
-          <h3>Order #1234</h3>
-          <h3>Time placed</h3>
+      <div class="header">
+        <h2>Confirmed Orders</h2>
+      </div>
+      <div class="main">
+        <div>
+          <h3>Customer Name</h3>
+          <h3>Order Number</h2>
           <ul>
-            <li>Order Item</li>
-            <li>Order Item</li>
-            <li>Order Item</li>
+            <li>Order Item, quantity</li>
+            <li>Order Item, quantity</li>
+            <li>Order Item, quantity</li>
           </ul>
         </div>
-      </span>
+      </div>
     </div>
+    <!-- End of Template for Confirmed Orders -->
   </main>
 </body>
 </html>
