--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -1,4 +1,20 @@
-.footer-logo {
-  background-color: red;
-  height: 100px;
+footer {
+  height: 200px;
+  width: 100vw;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  background-color: #FFC5D8;
+  padding: 0 40px;
+
+  .left {
+    width: 50%;
+  }
+
+  .right {
+    width: 40%;
+  }
 }
