--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,11 +1,11 @@
 <link rel="stylesheet" href="../../styles/footer.css">
 <footer>
-  <div class="footer-logo">
-    <h1>LOGO</h1>
+  <div class="left">
+    <h1>Ice Cream</h1>
   </div>
-  <div class="contact-info">
-    <h3>Lorem ipsum dolor</h3>
-    <h3>Lorem ipsum dolor</h3>
-    <h3>Lorem ipsum dolor</h3>
+  <div class="right">
+
+    <h3>Phone: (111) 111-1111</h3>
+    <h3>Adress: Lorem ipsum dolor</h3>
   </div>
 </footer>
