--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -15,6 +15,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/admin.css">
+  <link rel="stylesheet" href="../styles/layout.css">
   <link rel="stylesheet" href="../styles/typography.css">
 
   <title>Admin</title>
