add style to  home ejs

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,11 +23,8 @@
 <body>
   <%- include('partials/_header') %>
   <main>
-    <h1>Welcome to [restaurant]</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi non laborum, aspernatur facere.</p>
-    <button>Order Now!</button>
+    <h1>Welcome to [restaurant name]!</h1>
+    <button class="order">Order Now!</button>
   </main>
   <%- include('partials/_footer') %>
 </body>
