link order button to menu page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
   <%- include('partials/_header') %>
   <main>
     <h1>Welcome to [restaurant name]!</h1>
-    <button class="order">Order Now!</button>
+    <a href="menu"><button class="order" >Order Now!</button></a>
   </main>
   <%- include('partials/_footer') %>
 </body>
