style waiting confirmation page

--- a/views/order_confirmation.ejs
+++ b/views/order_confirmation.ejs
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
   <!-- CSS -->
-  <link rel="stylesheet" href="../styles/order_confirmation.css">
+  <link rel="stylesheet" href="../styles/waiting_confirmation.css">
   <link rel="stylesheet" href="../styles/layout.css">
   <link rel="stylesheet" href="../styles/typography.css">
 
@@ -23,7 +23,9 @@
 <body>
   <%- include('partials/_header') %>
   <main>
-    <h2>Please wait while the restaurant is confirming your order.</h2>
+    <h2>Order Confirmed.</h2>
+    <h3>Your order will be ready at [time]</h3>
+    <h4>We sent you an SMS confirmation at (111) 111-1111</h4>
   </main>
   <%- include('partials/_footer') %>
 </body>
