--- a/views/waiting_confirmation.ejs
+++ b/views/waiting_confirmation.ejs
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Waiting for Confirmation</title>
+
+  <!-- External CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="../styles/order_confirmation.css">
+  <link rel="stylesheet" href="../styles/layout.css">
+  <link rel="stylesheet" href="../styles/typography.css">
+
+  <title>Order Confirmation</title>
 </head>
 <body>
-  <h1>waiting_confirmation.ejs</h1>
+  <%- include('partials/_header') %>
+  <main>
+    <h2>Please wait while the restaurant is confirming your order.</h2>
+  </main>
+  <%- include('partials/_footer') %>
 </body>
 </html>
