start styling menu page

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -4,9 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- External CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Averia+Sans+Libre&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="../styles/menu.css">
+  <link rel="stylesheet" href="../styles/layout.css">
+  <link rel="stylesheet" href="../styles/typography.css">
+
   <title>Menu</title>
 </head>
 <body>
-  <h1>menu.ejs</h1>
+  <%- include('partials/_header') %>
+  <main>
+    <div class="category-one">
+      <div class="header">
+        <h1>Category 1</h1>
+      </div>
+      <div class="menu-items">
+        <div class="item-card">
+
+        </div>
+      </div>
+    </div>
+  </main>
+  <%- include('partials/_footer') %>
 </body>
 </html>
