--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -14,6 +14,11 @@ h3 {
   font-size: 11pt;
 }
 
+h4 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 10pt;
+}
+
 p {
   font-family: 'Open Sans', sans-serif;
   font-size: 12pt;
@@ -24,12 +29,6 @@ li {
   font-weight: lighter;
   font-size: 10pt;
 }
-
-// button {
-//   font-family: 'Open Sans', sans-serif;
-//   font-size: 12pt;
-//   color: white;
-// }
 
 label {
   font-family: 'Open Sans', sans-serif;
