--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -28,9 +28,15 @@
         <h1>Category 1</h1>
       </div>
       <div class="menu-items">
+        <!-- start of template for item card -->
         <div class="item-card">
-
+          <img class="food-photo" src="../public/images/placeholder.png" alt="">
+          <h3>Item Name</h3>
+          <h4>Item Description Item Description Item Description </h4>
+          <h4>$10.00</h4>
+          <button class="confirm">Add to order</button>
         </div>
+        <!-- end of template for item card -->
       </div>
     </div>
   </main>
