--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -31,10 +31,16 @@
         <!-- start of template for item card -->
         <div class="item-card">
           <img class="food-photo" src="../public/images/placeholder.png" alt="">
-          <h3>Item Name</h3>
-          <h4>Item Description Item Description Item Description </h4>
-          <h4>$10.00</h4>
-          <button class="confirm">Add to order</button>
+          <div class="details">
+            <h3>Item Name</h3>
+            <h4>Item Description Item Description Item Description </h4>
+            <h4>$10.00</h4>
+          </div>
+          <form action="">
+            <input class="qty" type="number">
+            <button class="confirm">Add to order</button>
+          </form>
+
         </div>
         <!-- end of template for item card -->
       </div>
