--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -1,27 +1,28 @@
 h1 {
-  font-family: 'Averia Sans Libre', cursive;
-  font-size: 22pt;
+  // font-family: 'Averia Sans Libre', cursive;
+  font-family: 'Baloo Chettan 2', sans-serif;
+  font-size: 20pt;
   color: #6C3E26;
 }
 
 h2 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 20pt;
+  font-size: 18pt;
 }
 
 h3 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 11pt;
+  font-size: 12pt;
 }
 
 h4 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 10pt;
+  font-size: 11pt;
 }
 
 p {
   font-family: 'Open Sans', sans-serif;
-  font-size: 12pt;
+  font-size: 10pt;
 }
 
 li {
