--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,11 +1,18 @@
 <link rel="stylesheet" href="../../styles/footer.css">
 <footer>
-  <div class="left">
-    <h1>Ice Cream</h1>
+  <div class="hours">
+    <h4><strong>Hours</strong></h4>
+    <p>Mon - Fri: 10:00am - 10:00pm</p>
+    <p>Sat - Sun: 11:00am - 11:00pm</p>
   </div>
-  <div class="right">
-
-    <h3>Phone: (111) 111-1111</h3>
-    <h3>Adress: Lorem ipsum dolor</h3>
+  <div class="contact">
+    <h4><strong>Contact</strong></h4>
+    <p>teashop@gmail.com</p>
+    <p>604-123-4567</p>
+  </div>
+  <div class="location">
+    <h4><strong>Location</strong></h4>
+    <p>123 Tea Street</p>
+    <p>Vancouver, BC V5T 0A2</p>
   </div>
 </footer>
