--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,9 +2,12 @@
 <header>
   <nav>
     <div class="logo">
-      <h1>
-        Ice Cream
-      </h1>
+      <img id="logo-image" src="https://static.thenounproject.com/png/1377058-200.png"></img>
+      <h2 id ="logo-wordmark"><strong>tea</strong>shop</h2>
+    </div>
+    <div class="sign-in">
+      <h3 id="login">login</h3>
+      <h3 id="register">register</h3>
     </div>
   </nav>
 </header>
