--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap');</style>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/admin.css">
