--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap');</style>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/home.css">
@@ -23,8 +24,13 @@
 <body>
   <%- include('partials/_header') %>
   <main>
-    <h1>Welcome to [restaurant name]!</h1>
-    <a href="menu"><button class="order" >Order Now!</button></a>
+    <div class="welcome">
+      <div class="welcome-message">
+        <h1 id="welcome-greeting">Welcome to the teashop!</h1>
+        <h3 id="welcome-slogan">Your one stop stop for milk tea, fruit tea, and smoothies.</h3>
+        <a href="menu"><button class="order" >View our menu</button></a>
+      </div>
+    </div>
   </main>
   <%- include('partials/_footer') %>
 </body>
