--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -12,6 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Baloo+Chettan+2&display=swap');</style>
 
   <!-- CSS -->
   <link rel="stylesheet" href="../styles/menu.css">
@@ -23,9 +24,17 @@
 <body>
   <%- include('partials/_header') %>
   <main>
-    <div class="category-one">
-      <div class="header">
-        <h1>Category 1</h1>
+    <div class="welcome">
+      <div class="sliding-background"></div>
+      <div class="welcome-message">
+        <h1 id="welcome-greeting">Welcome to the teashop!</h1>
+        <h3 id="welcome-slogan">Your one stop stop for milk tea, fruit tea, and smoothies.</h3>
+        <a href="#category-one"><button class="order" >View our menu</button></a>
+      </div>
+    </div>
+    <div class="categories">
+      <div id="category-one">
+        <h1>Milk Teas</h1>
       </div>
       <div class="menu-items">
         <!-- start of template for item card -->
