--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -6,18 +6,25 @@ footer {
   justify-content: space-between;
   align-items: center;
 
-  background-color: #fed9e5;
+  background-color: #78c9d7;
   padding: 0 40px;
   margin: 0;
+  color: white;
+}
 
-  .hours {
-    width: 40%
-  }
+.hours {
+  width: 40%
+}
 
-  .contact {
-    width: 33.3%
-  }
-  .location {
-    width: 33.3%
-  }
+.contact {
+  width: 33.3%
+}
+
+.location {
+  width: 33.3%
+}
+
+footer h3{
+  font-family: 'Baloo Chettan 2';
+  font-weight: 200;
 }
