--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -69,10 +69,20 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 2em;
+    padding: 1em;
 
-    .category-one {
-      margin: 2rem;
+    #category-one {
+      // margin: 2rem;
+      padding-left: 1em;
+      padding-right: 1em;
+      // border: 1px solid;
+      // background-color: #e698b0;
+      background-color: #98dae6;
+    }
+
+    #category-one h1 {
+      color: white;
+
     }
 
     .menu-items {
@@ -95,7 +105,7 @@ main {
 
         .food-photo {
           width: 200px;
-          height: 200px;
+          height: 300px;
           background-color: hotpink;
         }
 
@@ -104,6 +114,29 @@ main {
           flex-direction: column;
           justify-content: center;
           align-items: flex-start;
+        }
+
+        .price-tag {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 5px;
+        }
+
+        .price-tag p {
+          margin-right: 10px;
+          border-radius: 5px;
+          padding: 2px;
+          padding-left: 1em;
+          padding-right: 1em;
+          color: white;
+        }
+
+        #price {
+          background-color: #d4c87f;
+        }
+
+        #category {
+          background-color: #78c9d7;
         }
 
         .form {
