Change styles using box-shadow property

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -28,7 +28,7 @@
       <div class="sliding-background"></div>
       <div class="welcome-message">
         <h1 id="welcome-greeting">Welcome to the teashop!</h1>
-        <h3 id="welcome-slogan">Your one stop stop for milk tea, fruit tea, and smoothies.</h3>
+        <h3 id="welcome-slogan">Your one stop shop for milk tea, fruit tea, and smoothies.</h3>
         <a href="#category-one"><button class="order" >View our menu</button></a>
       </div>
     </div>
