--- a/styles/header.scss
+++ b/styles/header.scss
@@ -6,6 +6,7 @@ nav {
   justify-content: space-between;
   position: fixed;
   z-index: 10;
+  box-shadow: rgba(0, 0, 0, 0.10) 0px 1px 3px 0px;
 }
 
 nav .logo {
