--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -25,7 +25,7 @@ button.confirm:hover {
 }
 
 input {
-  border: 1px solid gray;
+  border: 1px solid #bababa;
   border-radius: 5px;
   padding: 10px 5px;
   margin: 10px;
