--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -63,7 +63,6 @@ main {
   max-width: 100%;
   overflow: hidden;
 
-
   .categories {
     display: flex;
     flex-direction: column;
@@ -72,12 +71,12 @@ main {
     padding: 1em;
 
     #category-one {
-      // margin: 2rem;
       padding-left: 1em;
       padding-right: 1em;
-      // border: 1px solid;
       // background-color: #e698b0;
       background-color: #98dae6;
+      border-radius: 5px;
+      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     }
 
     #category-one h1 {
@@ -100,8 +99,9 @@ main {
         justify-content: center;
         align-items: center;
 
-        border: 1px solid grey;
         border-radius: 5px;
+        // box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+        box-shadow: rgba(0, 0, 0, 0.10) 0px 1px 3px 0px;
 
         .food-photo {
           width: 200px;
