--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -71,17 +71,29 @@ main {
     padding: 1em;
 
     #category-one {
-      padding-left: 1em;
-      padding-right: 1em;
-      // background-color: #e698b0;
-      background-color: #98dae6;
-      border-radius: 5px;
-      box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+      margin-bottom: 5em;
+      content: "";
+      height: 2.5px;
+      border-top: 1px solid #78c9d7;
+      border-bottom: 1px solid #78c9d7;
     }
 
     #category-one h1 {
-      color: white;
+      position: relative;
+      color: #78c9d7;
+    }
 
+    #category-one h1:after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2.5px;
+      border-top: 1px solid #78c9d7;
+      border-bottom: 1px solid #78c9d7;
+      top: 2em;
+      bottom: 0;
+      left: 0;
+      z-index: -1;
     }
 
     .menu-items {
