--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -34,7 +34,7 @@
     </div>
     <div class="categories">
       <div id="category-one">
-        <h1>Milk Teas</h1>
+        <h1>MILK TEAS</h1>
       </div>
       <div class="menu-items">
         <!-- start of template for item card -->
