get cookie and render info on order_details page

--- a/views/order_details.ejs
+++ b/views/order_details.ejs
@@ -26,9 +26,7 @@
     <h2>Your Order Details</h2>
     <div class="items-list">
       <ul>
-        <li>Order Item, quantity</li>
-        <li>Order Item, quantity</li>
-        <li>Order Item, quantity</li>
+        <li><%= product %>, <%= quantity %></li>
       </ul>
     </div>
     <form action="">
