--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -25,8 +25,6 @@
   <main>
     <div class="category-one">
       <div class="header">
-
-
         <h1>Category 1</h1>
       </div>
       <div class="menu-items">
@@ -40,6 +38,7 @@
             <h4><%= item.price %></h4>
           </div>
           <form action="/addToCart" method="POST">
+            <input type="hidden" value=<%= item.name %> name="item_name">
             <input class="qty" name='qty' type="number">
             <button class="confirm">Add to order</button>
           </form>
