--- a/views/order_details.ejs
+++ b/views/order_details.ejs
@@ -26,7 +26,7 @@
     <h2>Your Order Details</h2>
     <div class="items-list">
       <ul>
-        <li><%= product %>, <%= quantity %></li>
+        <li><%= order %></li>
       </ul>
     </div>
     <form action="">
