working on checkout button

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -64,7 +64,7 @@
       </div>
     </div>
     <div class="confirmation">
-      <form action="POST">
+      <form class="checkout">
         <button class="confirm">Checkout</button>
       </form>
     </div>
