--- a/views/order_details.ejs
+++ b/views/order_details.ejs
@@ -25,11 +25,13 @@
   <main>
     <h2>Your Order Details</h2>
     <div class="items-list">
-      <ul>
-        <li>Order Item, quantity</li>
-        <li>Order Item, quantity</li>
-        <li>Order Item, quantity</li>
-      </ul>
+      <div class="menu-items">
+
+        <div>
+
+        </div>
+
+      </div>
     </div>
     <form action="">
       <button class="confirm" type="submit">
